--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Edit next line to provide your own name.
 title: Dan Port | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://dport96.github.io"
+url: "https://dport96.github.io_old"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
 baseurl: ""
 
